[package]
name = "ndarray-csv"
description = "Easily read homogeneous CSV data into a 2D ndarray"
readme = "README.md"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/ndarray-csv"
repository = "https://github.com/paulkernfeld/ndarray-csv"

[dependencies]
csv = "1"
ndarray = "0.11"
serde = "1"

[dev-dependencies]
matches = "0.1"
