[package]
name = "ndarray-csv"
description = "Easily read and write homogeneous CSV data to and from 2D ndarrays"
readme = "README.md"
version = "0.4.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/ndarray-csv"
repository = "https://github.com/paulkernfeld/ndarray-csv"

[dependencies]
csv = "1"
either = "1"
ndarray = "0.13"
serde = "1"

[dev-dependencies]
matches = "0.1"
