[package]
name = "ndarray-csv"
description = "Easily read and write homogeneous CSV data to and from 2D ndarrays"
readme = "README.md"
version = "0.5.1"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/ndarray-csv"
repository = "https://github.com/paulkernfeld/ndarray-csv"

[dependencies]
csv = "1"
either = "1"
# The relevant ndarray interfaces have actually been really stable so we can support a lot of ndarray versions. It is
# possible (but hopefully not too likely) that a future ndarray version will break compatibility, at which time we'll
# need to update this library to work with the new version of ndarray.
ndarray = ">= 0.7, < 0.16"
serde = "1"

[dev-dependencies]
matches = "0.1"
